added the awards page

--- a/jhodge_public/templates/awards.jinja2
+++ b/jhodge_public/templates/awards.jinja2
@@ -13,36 +13,35 @@
             <ul>
               <li>
                 <p><strong>Festival:</strong> Unveiled: Universal Eyes</p>
-                <p><strong>Award:</strong> Official Selection: 2017</p>
+                <p>Official Selection, 2017</p>
               </li>
               <li>
                 <p><strong>Festival:</strong> Hollywood Black Film Festival</p>
-                <p><strong>Award:</strong> Official Selection: 2017</p>
+                <p>Official Selection, 2017</p>
               </li>
               <li>
                 <p><strong>Festival:</strong> Love >> Film Screenings</p>
-                <p><strong>Award:</strong> Official Selection: 2017</p>
+                <p>Official Selection, 2017</p>
               </li>
               <li>
                 <p><strong>Festival:</strong> The Baltimore International Film Festival</p>
-                <p><strong>Award:</strong> Audience Choice Award, 2016</p>
+                <p>Audience Choice Award, 2016</p>
               </li>
               <li>
                 <p><strong>Festival:</strong> The Blackstar Film Festival</p>
-                <p><strong>Award:</strong> Audience Award - Short Narrative, 2016</p>
-                <p><strong>Award:</strong> Official Selection, 2016</p>
+                <p>Audience Award - Short Narrative, 2016</p>
               </li>
               <li>
                 <p><strong>Festival:</strong> The Martha's Vineyard African American Film Festival</p>
-                <p><strong>Award:</strong> Official Selection, 2016</p>
+                <p>Official Selection, 2016</p>
               </li>
               <li>
                 <p><strong>Festival:</strong> Urban World Film Festival</p>
-                <p><strong>Award:</strong> Official Selection, 2016</p>
+                <p>Official Selection, 2016</p>
               </li>
               <li>
                 <p><strong>Festival:</strong> The Damn! Film Series</p>
-                <p><strong>Award:</strong> Best Director, 2016</p>
+                <p>Best Director, 2016</p>
               </li>
             </ul>
           </section>
@@ -52,19 +51,19 @@
           <ul>
             <li>
               <p><strong>Festival:</strong> Festival de Cannes</p>
-              <p><strong>Award:</strong> Short Film Corner, 2016</p>
+              <p>Short Film Corner, 2016</p>
             </li>
             <li>
               <p><strong>Festival:</strong> Big Apple Film Festival</p>
-              <p><strong>Award:</strong> Official Selection, 2016</p>
+              <p>Official Selection, 2016</p>
             </li>
             <li>
               <p><strong>Festival:</strong> The NYC Horror Film Festival</p>
-              <p><strong>Award:</strong> Audience Choice Award, 2016</p>
+              <p>Audience Choice Award, 2016</p>
             </li>
             <li>
               <p><strong>Festival:</strong> The Spotlight Film Awards</p>
-              <p><strong>Award:</strong> Gold Award, 2016</p>
+              <p>Gold Award, 2016</p>
             </li>
           </ul>
           </section>
@@ -74,15 +73,15 @@
           <ul>
             <li>
               <p><strong>Festival:</strong> East Harlem International Film Festival</p>
-              <p><strong>Award:</strong> Official Selection, 2012</p>
+              <p>Official Selection, 2012</p>
             </li>
             <li>
               <p><strong>Festival:</strong> Los Angeles Movie Awards</p>
-              <p><strong>Award:</strong> Honorable Mention, 2011</p>
+              <p>Honorable Mention, 2011</p>
             </li>
             <li>
               <p><strong>Festival:</strong> Hollywood Black Film Festival</p>
-              <p><strong>Award:</strong> Official Selection, 2011</p>
+              <p>Official Selection, 2011</p>
             </li>
           </ul>
           </section>
@@ -92,7 +91,7 @@
           <ul>
             <li>
               <p><strong>Festival:</strong> Katherine Gibbs Music Video Awards</p>
-              <p><strong>Award:</strong> Best of Show, 2006</p>
+              <p>Best of Show, 2006</p>
             </li>
           </ul>
           </section>
@@ -102,7 +101,7 @@
           <ul>
             <li>
               <p><strong>Festival:</strong> Tribecca Film Festival</p>
-              <p><strong>Award:</strong> Alumnis Award, Urban Visionaries, 2004</p>
+              <p>Alumnis Award, Urban Visionaries, 2004</p>
             </li>
           </ul>
           </section>
@@ -112,15 +111,15 @@
           <ul>
             <li>
               <p><strong>Festival:</strong> WESTfest Short Film and Video Competition</p>
-              <p><strong>Award:</strong> Best of Show Award, 2002</p>
+              <p>Best of Show Award, 2002</p>
             </li>
             <li>
               <p><strong>Event:</strong> The Hague Appeal for Peace, Amsterdam</p>
-              <p><strong>Award:</strong> Citation Award, 2001</p>
+              <p>Citation Award, 2001</p>
             </li>
             <li>
               <p><strong>Festival:</strong> San Francisco International Film Festival 2000</p>
-              <p><strong>Award:</strong> Gold Spire Youth Award 2000</p>
+              <p>Gold Spire Youth Award 2000</p>
             </li>
           </ul>
         </div>
