--- a/jhodge_public/templates/awards.jinja2
+++ b/jhodge_public/templates/awards.jinja2
@@ -8,6 +8,17 @@
     <section id="content">
         <div class="big-content black">
           <h1>Awards and Recognition</h1>
+
+          <section class="award-list">
+            <h2>Film: Knockout Game</h2>
+            <ul>
+              <li>
+                <p><strong>Festival:</strong> The Cannes Short Film Corner</p>
+                <p>Official Selection, 2017</p>
+              </li>
+            </ul>
+          </section>
+
           <section class="award-list">
             <h2>Film: The Jump</h2>
             <ul>
@@ -47,81 +58,81 @@
           </section>
 
           <section class="award-list">
-          <h2>Film: The Kind Ones</h2>
-          <ul>
-            <li>
-              <p><strong>Festival:</strong> Festival de Cannes</p>
-              <p>Short Film Corner, 2016</p>
-            </li>
-            <li>
-              <p><strong>Festival:</strong> Big Apple Film Festival</p>
-              <p>Official Selection, 2016</p>
-            </li>
-            <li>
-              <p><strong>Festival:</strong> The NYC Horror Film Festival</p>
-              <p>Audience Choice Award, 2016</p>
-            </li>
-            <li>
-              <p><strong>Festival:</strong> The Spotlight Film Awards</p>
-              <p>Gold Award, 2016</p>
-            </li>
-          </ul>
+            <h2>Film: The Kind Ones</h2>
+            <ul>
+              <li>
+                <p><strong>Festival:</strong> Festival de Cannes</p>
+                <p>Short Film Corner, 2016</p>
+              </li>
+              <li>
+                <p><strong>Festival:</strong> Big Apple Film Festival</p>
+                <p>Official Selection, 2016</p>
+              </li>
+              <li>
+                <p><strong>Festival:</strong> The NYC Horror Film Festival</p>
+                <p>Audience Choice Award, 2016</p>
+              </li>
+              <li>
+                <p><strong>Festival:</strong> The Spotlight Film Awards</p>
+                <p>Gold Award, 2016</p>
+              </li>
+            </ul>
           </section>
 
           <section class="award-list">
-          <h2>Film: Threading Needles</h2>
-          <ul>
-            <li>
-              <p><strong>Festival:</strong> East Harlem International Film Festival</p>
-              <p>Official Selection, 2012</p>
-            </li>
-            <li>
-              <p><strong>Festival:</strong> Los Angeles Movie Awards</p>
-              <p>Honorable Mention, 2011</p>
-            </li>
-            <li>
-              <p><strong>Festival:</strong> Hollywood Black Film Festival</p>
-              <p>Official Selection, 2011</p>
-            </li>
-          </ul>
+            <h2>Film: Threading Needles</h2>
+            <ul>
+              <li>
+                <p><strong>Festival:</strong> East Harlem International Film Festival</p>
+                <p>Official Selection, 2012</p>
+              </li>
+              <li>
+                <p><strong>Festival:</strong> Los Angeles Movie Awards</p>
+                <p>Honorable Mention, 2011</p>
+              </li>
+              <li>
+                <p><strong>Festival:</strong> Hollywood Black Film Festival</p>
+                <p>Official Selection, 2011</p>
+              </li>
+            </ul>
           </section>
 
           <section class="award-list">
-          <h2>Film: 5 Dead Men</h2>
-          <ul>
-            <li>
-              <p><strong>Festival:</strong> Katherine Gibbs Music Video Awards</p>
-              <p>Best of Show, 2006</p>
-            </li>
-          </ul>
+            <h2>Film: 5 Dead Men</h2>
+            <ul>
+              <li>
+                <p><strong>Festival:</strong> Katherine Gibbs Music Video Awards</p>
+                <p>Best of Show, 2006</p>
+              </li>
+            </ul>
           </section>
 
           <section class="award-list">
-          <h2>Honorary Award for Film Education</h2>
-          <ul>
-            <li>
-              <p><strong>Festival:</strong> Tribecca Film Festival</p>
-              <p>Alumnis Award, Urban Visionaries, 2004</p>
-            </li>
-          </ul>
+            <h2>Honorary Award for Film Education</h2>
+            <ul>
+              <li>
+                <p><strong>Festival:</strong> Tribecca Film Festival</p>
+                <p>Alumnis Award, Urban Visionaries, 2004</p>
+              </li>
+            </ul>
           </section>
 
           <section class="award-list">
-          <h2>El Sueño Zapatista Cinco Años Despues</h2>
-          <ul>
-            <li>
-              <p><strong>Festival:</strong> WESTfest Short Film and Video Competition</p>
-              <p>Best of Show Award, 2002</p>
-            </li>
-            <li>
-              <p><strong>Event:</strong> The Hague Appeal for Peace, Amsterdam</p>
-              <p>Citation Award, 2001</p>
-            </li>
-            <li>
-              <p><strong>Festival:</strong> San Francisco International Film Festival 2000</p>
-              <p>Gold Spire Youth Award 2000</p>
-            </li>
-          </ul>
+            <h2>El Sueño Zapatista Cinco Años Despues</h2>
+            <ul>
+              <li>
+                <p><strong>Festival:</strong> WESTfest Short Film and Video Competition</p>
+                <p>Best of Show Award, 2002</p>
+              </li>
+              <li>
+                <p><strong>Event:</strong> The Hague Appeal for Peace, Amsterdam</p>
+                <p>Citation Award, 2001</p>
+              </li>
+              <li>
+                <p><strong>Festival:</strong> San Francisco International Film Festival 2000</p>
+                <p>Gold Spire Youth Award 2000</p>
+              </li>
+            </ul>
         </div>
     </section>
 </main>
