--- a/jhodge_public/templates/home.jinja2
+++ b/jhodge_public/templates/home.jinja2
@@ -12,36 +12,42 @@
                     <li>Director</li>
                     <li>Writer</li>
                     <li>Producer</li>
-                    <li>omegahodge@gmail.com</li>
+                    <li><a href="mailto:omegahodge@gmail.com">omegahodge@gmail.com</a></li>
                 </ul>
                 <div class="horizontal-bar white"></div>
                 <h2>Latest News</h2>
-                <ul id="news-list">
-                    <li class="news-item">
-                        2016 Award-Winning Filmmakers in the Spotlight
-                        <a href="http://www.spotlighthorrorawards.com/2016filmmakers.html" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
-                    </li>
-                    <li class="news-item">
-                        The 15th Annual NYC Horror Film Festival
-                        <a href="http://www.sociallysuperlative.com/2016/11/18/the-nyc-horror-film-festival/" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
-                    </li>
-                    <li class="news-item">
-                        Profile by New York City Lifestyle and Portrait photographer, Zhanna Kurmanova
-                        <a href="http://www.kurmanova.com/the-stories#comp-irs2vqoilink" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
-                    </li>
-                    <li class="news-item">
-                        Arverne Filmmaker Taking Movie to Cannes Film Festival
-                        <a href="http://www.ny1.com/nyc/queens/news/2016/04/6/arverne-filmmaker-taking-movie-to-cannes-film-festival-.html" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
-                    </li>
-                    <li class="news-item">
-                        PRO-TV Alum Jamal Hodge's The Kind Ones Heads to Cannes
-                        <a href="http://www.dctvny.org/about/news/16/03/pro-tv-alum-jamal-hodge%E2%80%99s-kind-ones-heads-cannes" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
-                    </li>
-                    <li class="news-item">
-                        Interview with a Cannes Director: Jamal Hodge
-                        <a href="http://satchelbell.com/blog/2016/5/17/interveiw-with-a-cannes-director-jamal-hodge" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
-                    </li>
-                </ul>
+                <section id="news-content">
+                    <ul id="news-list">
+                        <li class="news-item">
+                            Director Jamal Hodge interview at the 2016 Big Apple Film Festival
+                            <a href="https://www.youtube.com/watch?v=39P7SqmYRt4&t=12s" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
+                        </li>
+                        <li class="news-item">
+                            2016 Award-Winning Filmmakers<br/> in the Spotlight
+                            <a href="http://www.spotlighthorrorawards.com/2016filmmakers.html" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
+                        </li>
+                        <li class="news-item">
+                            The 15th Annual NYC Horror Film Festival
+                            <a href="http://www.sociallysuperlative.com/2016/11/18/the-nyc-horror-film-festival/" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
+                        </li>
+                        <li class="news-item">
+                            Profile by New York City Lifestyle and Portrait photographer, Zhanna Kurmanova
+                            <a href="http://www.kurmanova.com/the-stories#comp-irs2vqoilink" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
+                        </li>
+                        <li class="news-item">
+                            Arverne Filmmaker Taking Movie to<br/>Cannes Film Festival
+                            <a href="http://www.ny1.com/nyc/queens/news/2016/04/6/arverne-filmmaker-taking-movie-to-cannes-film-festival-.html" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
+                        </li>
+                        <li class="news-item">
+                            PRO-TV Alum Jamal Hodge's The Kind Ones Heads to Cannes
+                            <a href="http://www.dctvny.org/about/news/16/03/pro-tv-alum-jamal-hodge%E2%80%99s-kind-ones-heads-cannes" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
+                        </li>
+                        <li class="news-item">
+                            Interview with a Cannes Director:<br/>Jamal Hodge
+                            <a href="http://satchelbell.com/blog/2016/5/17/interveiw-with-a-cannes-director-jamal-hodge" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
+                        </li>
+                    </ul>
+                </section>
             </div>
         </div>
     </section>
