Removing the wetransfer directories

--- a/jhodge_public/templates/about.jinja2
+++ b/jhodge_public/templates/about.jinja2
@@ -10,7 +10,7 @@
             <h1>Jamal J. Hodge</h1>
             <div class="horizontal-bar white"></div>
             <p class="about-external">
-                Check more about me at <a href="https://iam.film/jamalhodge/">iam.film/next</a>
+                Check more about me at <a href="https://iam.film/jamalhodge/">iam.film/jamalhodge</a>
             </p>
 
             <article>
