--- a/jhodge_public/templates/layout.jinja2
+++ b/jhodge_public/templates/layout.jinja2
@@ -94,7 +94,7 @@
         </nav>
         {% block content%}{% endblock content%}
         <footer>
-            <p id="copyright">Copyright 2016 &copy; Jamal Hodge, jamalhodge.com</p>
+            <p id="copyright">Copyright 2016 &copy; Jamal Hodge, directorhodge.com</p>
         </footer>
         {% block specific_scripts %}{% endblock specific_scripts %}
     </body>
