New award and some old fixes

--- a/jhodge_public/templates/about.jinja2
+++ b/jhodge_public/templates/about.jinja2
@@ -3,7 +3,7 @@
 {% block content %}
 <main>
     <section id="about-banner">
-        <img src="{{gh_media}}jhodge_about.jpg" />
+        <img src="{{gh_media}}jhodge_about2.jpg" />
     </section>
     <section id="content">
         <div class="big-content black">
@@ -15,7 +15,7 @@
 
             <article>
                 <div class="full-width">
-                    <p><strong>Jamal Hodge (Producer)</strong> is a filmmaker who believes that the tribulations of his childhood have formed a deep understanding of pain, identity, and the importance of compassion. In his films Hodge strives to use darkness to show light in order to expand the audience’s awareness of their own humanity.</p>
+                    <p><strong>Jamal Hodge</strong> is a filmmaker who believes that the tribulations of his childhood have formed a deep understanding of pain, identity, and the importance of compassion. In his films Hodge strives to use darkness to show light in order to expand the audience’s awareness of their own humanity.</p>
 
                     <p>His short urban crime drama “Knockout Game” is an official selection of the Cannes Short Film Corner in 2017. Also, his horror film “The Kind Ones” has screened at the Cannes Short Film Corner, the Big Apple Film Festival, and won the Audience Choice award at the New York City Horror Film Festival and the Gold Award at the Spotlight horror awards all in 2016. Additionally, his short film “ The Jump” won the audience award for best Narrative Short Film at the Black Star Film Festival and the Baltimore International Film Festival. The Jump has also been an official selection in festivals such as the Urban World Film Festival and Hollywood Black Film Festival.</p>
 
