--- a/jhodge_public/templates/awards.jinja2
+++ b/jhodge_public/templates/awards.jinja2
@@ -13,8 +13,8 @@
             <h2>Film: Knockout Game</h2>
             <ul>
               <li>
-                <p><strong>Festival:</strong> The Cannes Short Film Corner</p>
-                <p>Official Selection, 2017</p>
+                <p><strong>Festival:</strong> Festival de Cannes</p>
+                <p>Short Film Corner, 2017</p>
               </li>
             </ul>
           </section>
@@ -22,6 +22,10 @@
           <section class="award-list">
             <h2>Film: The Jump</h2>
             <ul>
+              <li>
+                <p><strong>Festival:</strong> The People's Film Festival</p>
+                <p>Official Selection, 2017</p>
+              </li>
               <li>
                 <p><strong>Festival:</strong> Unveiled: Universal Eyes</p>
                 <p>Official Selection, 2017</p>
